--- a/config/services.yml
+++ b/config/services.yml
@@ -1,6 +1,5 @@
-parameters:
-    chat_table: '%core.table_prefix%ajax_chat'
-    chat_session_table: '%core.table_prefix%ajax_chat_sessions'
+imports:
+    - { resource: tables.yml }
     
 services:
     spaceace.ajaxchat.listener:
@@ -17,8 +16,8 @@ services:
             - '@ext.manager'
             - '@path_helper'
             - '@service_container'
-            - '%chat_table%'
-            - '%chat_session_table%'
+            - '%spaceace.ajaxchat.chat_table%'
+            - '%spaceace.ajaxchat.chat_session_table%'
             - '%core.root_path%'
             - '%core.php_ext%'
             - '@spaceace.ajaxchat.chat.controller'
@@ -28,6 +27,7 @@ services:
         class: spaceace\ajaxchat\controller\chat
         arguments:
             - '@template'
+            - '@template_context'
             - '@user'
             - '@dbal.conn'
             - '@auth'
@@ -37,8 +37,8 @@ services:
             - '@ext.manager'
             - '@path_helper'
             - '@service_container'
-            - '%chat_table%'
-            - '%chat_session_table%'
+            - '%spaceace.ajaxchat.chat_table%'
+            - '%spaceace.ajaxchat.chat_session_table%'
             - '%core.root_path%'
             - '%core.php_ext%'
     spaceace.ajaxchat.cron.task.prune_ajaxchat:
@@ -48,7 +48,7 @@ services:
             - '@dbal.conn'
             - '@user'
             - '@log'
-            - '%core.table_prefix%'
+            - '%spaceace.ajaxchat.chat_table%'
         calls:
             - [set_name, [cron.task.prune_ajaxchat]]
         tags:
